@@ -15,6 +15,7 @@
     "snouz-big-solar-panel >= 1.0.4",
     "se-space-trains >= 1.0.4",
     "long_stack_inserter >= 1.0.1",
+    "minimalist-rails >= 1.2.0",
     "(?) bzsilicon",
     "(?) aai-industry",
     "(?) omnimatter_compression"
