@@ -20,6 +20,7 @@ moshine-tech-ai-trainer=Neural networks
 moshine-tech-advanced-ai-cores=Advanced AI cores
 moshine-tech-processing-grid=Process indexer
 tech-space-trains=Maglev trains
+minimalist-rails=Neodymium rails
 
 [technology-description]
 moshine-tech-silicon=Allows you to convert sand into silicon.
@@ -36,6 +37,7 @@ moshine-tech-ai-trainer=AI models can be optimized by learning from themselves, 
 moshine-tech-advanced-ai-cores=Unlock even more AI tiers.
 moshine-tech-processing-grid=Processes extremely complex operations.
 tech-space-trains=Magnetic trains with bigger cargo and express speed.
+minimalist-rails=Simple rails with no gravel.
 
 [entity-name]
 supercomputer=Neural computer
@@ -49,6 +51,11 @@ space-locomotive=Maglev locomotive
 space-cargo-wagon=Maglev cargo wagon
 space-fluid-wagon=Maglev fluid wagon
 space-train-battery-charging-station=Maglev battery charging station
+
+straight-rail-minimal=Straight neodymium rail
+curved-rail-a-minimal=Half diagonal neodymium rail
+curved-rail-b-minimal=Curved neodymium rail
+half-diagonal-rail-minimal=Curved neodymium rail
 
 [entity-description]
 supercomputer=Unlocks technologies by advancing the machines intelligence.
@@ -106,6 +113,8 @@ space-train-battery-charging-station=Maglev battery charging station
 space-train-battery-pack=Maglev battery (Charged)
 space-train-discharged-battery-pack=Maglev battery (Discharged)
 space-train-destroyed-battery-pack=Maglev battery (Destroyed)
+
+rail-minimal=Neodymium rail
 
 [item-description]
 supercomputer=Unlocks technologies by advancing the machines intelligence.
